--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,16 @@
+# Tomcat Server
+server:
+  port: 8080
 
+# Logger
+logging.level:
+  web: DEBUG
+  '[com.comit.simplehr]': DEBUG
+  
+spring:
+
+# Database Settings
+  datasource: 
+    url: jdbc:mysql://localhost:3306/user_db
+    username: root
+    password: root
